--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>South of 6 Data Cleaner</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+        @media (min-width: 800px) {
+            #content {
+                margin: 0 auto;
+                width: 65%;
+            }
+        }
+    </style>
 </head>
+
 <body>
-    <div class="center">
-        <h1>Call for Service Data Cleaner</h1>
-        <p>Data must be in same format as stated in documentation, otherwise this site will return an error. <br />Please only upload Excel (.xlsx) files, any other file type will return an error.</p>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">South of 6 Data Cleaner</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="https://ajleitzke.pythonanywhere.com">Home</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="content">
+        <h1><br>Call for Service Data Cleaner</h1>
+        <p>Data must be in same format as stated in documentation, otherwise this site will return an error.
+            <br />Please
+            only upload Excel (.xlsx) files, any other file type will return an error.</p>
         <form method="POST" action="/" enctype="multipart/form-data">
-            <input class="ok" type="file" name="file">
-            <button class="op">Submit</button>
+            <div class="input-group mb-3">
+                <input class="form-control" type="file" name="file" />
+                <button type="submit" class="btn btn-secondary">Submit</button>
+            </div>
         </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
